# brew-browser

./: .gitignore  CONTRIBUTING-bundles.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  bundles.json  package-lock.json  package.json  vitest.config.ts
.github/workflows/: linux-build.yml  validate-recipes.yml
docs/: BUILD.md  PHILOSOPHY.md
landing/: index.html
memory-bank/: NEXT-SESSION.md  accessibility.md  activeContext.md  agentLog.md  apiTests.md  backendApi.md  codeReview.md  decisions.md  designSystem.md  frontendComponents.md  ideas.md  progress.md  projectbrief.md  realityCheck.md  security.md  systemPatterns.md  techContext.md  toc.md  uxArchitecture.md  visualStory.md
native/: Package.swift  README.md  build-app.sh  release.sh
recipes/: agentic-web-dev.json  databases.json  graphics.json  image-gen.json  lamp.json  lemp.json  local-llm.json  media.json  recipe.schema.json  web-dev.json
scripts/: validate-recipes.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: bundles.json  categories.json
src-tauri/icons/: icon.icns
src-tauri/src/: bundles_live.rs  error.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/brew/: error_patterns.rs  exec.rs  mod.rs  parse.rs  paths.rs
src-tauri/src/commands/: actions.rs  brewfile.rs  bundles.rs  cask_icon.rs  cask_icon_homepage.rs  categories.rs  disk_usage.rs  env.rs  info.rs  list.rs  mod.rs  search.rs  services.rs  settings.rs  trending.rs  vulns.rs
src-tauri/src/github/: mod.rs  url.rs
src-tauri/src/system/: mod.rs  profile.rs
src-tauri/src/trending/: cache.rs  client.rs  mod.rs
src-tauri/src/vulns/: cache.rs  client.rs  enrich.rs  fingerprint.rs  mod.rs
test-fixtures/: readiness-cases.json
(+120 files in other folders)
