[package]
name = "brew-browser"
version = "0.1.0"
description = "An honestly open Homebrew browser, manager, and Brewfile snapshot tool."
authors = ["Michael Sitarzewski"]
edition = "2021"
license = "MIT"

[lib]
name = "brew_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "sync", "time"] }

# Error handling
thiserror = "1"

# Job IDs and timestamps
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP for trending analytics
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }

# OS-correct paths for ~/Library/Application Support
dirs = "5"

# Base64 encoding for cask_icon data URLs
base64 = "0.22"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Native macOS window vibrancy (NSVisualEffectView) — gives the sidebar that
# "frosted glass" look the rest of macOS uses. Cross-platform crate; we only
# call its macOS APIs.
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"

[dev-dependencies]
# Reserved for future integration tests that need a sandbox dir
# (e.g. brewfile_export / brewfile_import) — currently unused by the
# Wave 3 test pass but kept here so Reality Checker can wire in tests
# without bumping deps.
tempfile = "3"
